--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.20.3",
     "cors": "2.8.5",
+    "dotenv": "16.4.5",
     "express": "4.20.0",
+    "jsonwebtoken": "9.0.2",
+    "logsh": "1.0.7",
     "mediasoup": "3.14.14",
-    "socket.io": "4.7.5"
+    "mysql": "2.18.1",
+    "mysql2": "3.11.0",
+    "public-ip": "7.0.1",
+    "socket.io": "4.7.5",
+    "uuid": "10.0.0"
   }
 }
