--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "1.7.7",
     "body-parser": "1.20.3",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
@@ -19,7 +20,6 @@
     "mediasoup": "3.14.14",
     "mysql": "2.18.1",
     "mysql2": "3.11.0",
-    "public-ip": "7.0.1",
     "socket.io": "4.7.5",
     "uuid": "10.0.0"
   }
